<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyClock</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_alarm">添加闹钟</string>
    <string name="play_sound">Play Sound</string>
    <string name="start">start</string>
    <string name="paus">暂停</string>
    <string name="resume">继续</string>
    <string name="reset">重置</string>
    <string name="lap">计时</string>
    <string name="_">:</string>

</resources>
